Added real affiliate links to View Deal buttons - first 3 products now have working Amazon links

--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
                 <!-- TECH & ELECTRONICS -->
                 
                 <!--Product 1 -->
-                <a href="#" class="product-card">
+                <a href="https://amzn.to/3QxY8K9" target="_blank" rel="noopener" class="product-card">
                     <div class="product-image" style="background-image: url('https://images.unsplash.com/photo-1517336714731-489689fd1ca8?w=600&q=80');">
                         <span class="product-badge">Editor's Pick</span>
                     </div>
@@ -936,7 +936,7 @@
                 </a>
 
                 <!-- Product 2 -->
-                <a href="#" class="product-card">
+                <a href="https://amzn.to/3QxY8K9" target="_blank" rel="noopener" class="product-card">
                     <div class="product-image" style="background-image: url('https://images.unsplash.com/photo-1695653420076-3ec3409d39bc?w=600&q=80');">
                         <span class="product-badge">Hot Deal</span>
                     </div>
@@ -956,7 +956,7 @@
                 </a>
 
                 <!-- Product 3 -->
-                <a href="#" class="product-card">
+                <a href="https://amzn.to/3QxY8K9" target="_blank" rel="noopener" class="product-card">
                     <div class="product-image" style="background-image: url('https://images.unsplash.com/photo-1546868871-7041f2a55e12?w=600&q=80');">
                         <span class="product-badge">New</span>
                     </div>
